Fix gaps between cards

--- a/assets/css/extended/custom_.css
+++ b/assets/css/extended/custom_.css
@@ -659,7 +659,7 @@ body.dark>footer.footer::after {
 .post-content .docs-cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: calc(var(--gap) / 2.66);
+    gap: calc(var(--gap) / 1.177);
     padding: calc(var(--gap) / 8) 0;
 }
 
@@ -692,7 +692,7 @@ body.dark>footer.footer::after {
 .post-content .docs-cards-container-links {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    gap: calc(var(--gap) / 3.92);
+    gap: calc(var(--gap) / 2.33);
     grid-auto-rows: 1fr;
 }
 
